# hirehub

./: pyproject.toml
backend/: crawler.py
backend/crawler/: data.db  output.csv  run_spider.sh  scrapy.cfg
backend/crawler/hire_crawler/: items.py  middlewares.py  pipelines.py  settings.py
backend/crawler/hire_crawler/spiders/: crawler.py
