[tool.poetry]
name = "hirehub"
version = "0.1.0"
description = ""
authors = ["Sunil Baratam <sunil.baratam6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
scrapy = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
